--- a/KnuTalk/knutalk-top/knutalk-data/pom.xml
+++ b/KnuTalk/knutalk-top/knutalk-data/pom.xml
@@ -16,6 +16,18 @@
 	<description>this is a data project.</description>
 
 	<dependencies>
+		<!-- springboot dependencies -->
+		<dependency>
+	  	  	<groupId>org.springframework.boot</groupId>
+  	  		<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		
+		<!-- knutalk dependencies -->
+		<dependency>
+			<groupId>jin.h.mun</groupId>
+			<artifactId>knutalk-domain</artifactId>
+			<version>${knutalk.version}</version>
+		</dependency>
 	</dependencies>
   
 </project>
