social 코드 추가 (구글, 페이스북, 카카오, 네이버), 소셜 코드 추가에 따른 다른 코드 수정

--- a/KnuTalk/knutalk-top/knutalk-web/pom.xml
+++ b/KnuTalk/knutalk-top/knutalk-web/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
   
 	<artifactId>knutalk-web</artifactId>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
   
 	<name>knutalk-web</name>
 	<description>
@@ -31,6 +31,51 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+
+		<!-- h2 db dependencies -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<!-- https://github.com/gavlyukovskiy/spring-boot-data-source-decorator -->
+		<dependency>
+			<groupId>com.github.gavlyukovskiy</groupId>
+			<artifactId>p6spy-spring-boot-starter</artifactId>
+			<version>1.5.7</version>
+		</dependency>
+
+		<!-- knutalk dependencies -->
+		<dependency>
+			<groupId>jin.h.mun</groupId>
+			<artifactId>knutalk-domain</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>jin.h.mun</groupId>
+			<artifactId>knutalk-data</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>jin.h.mun</groupId>
+			<artifactId>knutalk-social</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>jin.h.mun</groupId>
+			<artifactId>knutalk-api</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
   
