--- a/KnuTalk/knutalk-top/knutalk-api/pom.xml
+++ b/KnuTalk/knutalk-top/knutalk-api/pom.xml
@@ -16,6 +16,11 @@
 	<description>this is a api project.</description>
 
 	<dependencies>
+		<!-- springboot dependencies -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 	</dependencies>
   
 </project>
