--- a/KnuTalk/knutalk-top/pom.xml
+++ b/KnuTalk/knutalk-top/pom.xml
@@ -36,7 +36,7 @@
 	<parent> 
 		<groupId>org.springframework.boot</groupId> 
 		<artifactId>spring-boot-starter-parent</artifactId> 
-		<version>2.1.3.RELEASE</version> 
+		<version>2.1.7.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository --> 
 	</parent>
   
@@ -56,12 +56,14 @@
 	</dependencies>
 	
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 
 </project>
