--- a/KnuTalk/.gitignore
+++ b/KnuTalk/.gitignore
@@ -15,9 +15,11 @@ bin/
 *.iws
 *.iml
 *.ipr
-*.txt
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+
+### Common ###
 **/target/
 **/test-classes
+*.txt
