--- a/KnuTalk/knutalk-top/knutalk-web/src/main/resources/application.yml
+++ b/KnuTalk/knutalk-top/knutalk-web/src/main/resources/application.yml
@@ -5,29 +5,12 @@ spring:
   profiles:
     include:
       - oauth
+      - database
   devtools:
     livereload:
       enabled: true
   thymeleaf:
     cache: false
-  datasource:
-    url: jdbc:h2:mem:testdb #InMemory DB 사용
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
-  jpa:
-    hibernate:
-      ddl-auto: create
-      naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-    properties:
-      hibernate:
-        format_sql: true
-        default_batch_fetch_size: 100
-  h2:
-    console:
-      enabled: true
-      path: /h2-console #h2 db 접속 url : http://localhost:8080/h2-console
 
 #logging:
 #  level:
