domain 변경 사항 - RoleType : getRoleType() -> getRoleName()으로 메서드 이름 변경 - SocialType : getSocialType() -> getSocialName()으로 메서드 이름 변경 - 메서드 이름 변경에 따른 테스트 코드 수정 - User 엔티티 UserDTO로 변경하는 코드 추가
data 변경 사항
- DataConfig web module로 이동

dto 변경 사항
- UserDTO 추가, UserLoginRequest 추가

service 변경 사항
- CustomUserDetailsService 추가 (TODO : 테스트 코드 작성)
- LoginErrorDistinctionService 추가 (테스트 코드 작성 완료)
- 불필요한 서비스 삭제

social 변경 사항
- UserDTO 가 역할을 대신하므로 SessionUser 삭제
- session에 UserDTO 를 담도록 수정
- Spring Security에서 권한이 정상적으로 인식되도록 SimpleGrantedAuthority에 prefix가 "ROLE_" 로 시작되는 권한 이름을 담는다.

web 변경 사항
- DataConfig, FaviconConfig 추가
- SecurityConfig 수정, WebConfig 수정
- 로그인 관련 핸들러 추가 (CustomLoginFailureHandler, CustomLoginSuccessHandler)
- 유저 정보 세션 관리를 위한 SessionUser, SocialUserArgumentResolver 추가
- AccountController, HomeController 수정
- URL 관리를 위한 HomeURL, AccountURL 추가
- favicon 관련 파일 추가
- 로그인 관련 js, html 파일 추가
- packaging war -> jar로 변경

--- a/RowdyStory/rowdystory-top/rowdystory-api/pom.xml
+++ b/RowdyStory/rowdystory-top/rowdystory-api/pom.xml
@@ -21,6 +21,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
+		<!-- rowdystory dependencies -->
+		<dependency>
+			<groupId>jin.h.mun</groupId>
+			<artifactId>rowdystory-dto</artifactId>
+			<version>${rowdystory.version}</version>
+		</dependency>
 	</dependencies>
   
 </project>
