--- a/RowdyStory/rowdystory-top/rowdystory-service/pom.xml
+++ b/RowdyStory/rowdystory-top/rowdystory-service/pom.xml
@@ -21,6 +21,22 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+
+		<!-- rowdystory dependencies -->
+		<dependency>
+			<groupId>jin.h.mun</groupId>
+			<artifactId>rowdystory-dto</artifactId>
+			<version>${rowdystory.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>jin.h.mun</groupId>
+			<artifactId>rowdystory-data</artifactId>
+			<version>${rowdystory.version}</version>
+		</dependency>
 	</dependencies>
   
 </project>
