domain, data, social, service, web 모듈 수정, exception 모듈 추가
domain 변경 사항
- RoleType, SocialType @NonNull 사용하도록 수정
- User email 중복 불가능하도록 수정
- User 테스트 코드 수정, PersistHelper 수정
- User 의 change 메서드에 if 문을 통한 null 체크 대신 롬복의 @NonNull 어노테이션 사용
- User 가 social 유저인지를 판단하는 메서드 추가

data 변경 사항
- 띄어쓰기 수정

social 변경 사항
- CustomUserDetailsService -> FormLoginService 로 이름 변경, FormLoginService 테스트 코드 추가
- CustomOAuth2UserService -> OAuth2LoginService 로 이름 변경, OAuth2LoginService 테스트 코드 추가, 테스트를 위한 DummyOAuth2User, DummyOAuth2UserRequest 추가
- LoginErrorDistinctionService 수정, 테스트 코드 수정
- social 모듈 exception 으로 이름 변경
- social 모듈에 있던 코드 service 모듈로 이동

service 변경 사항
- social 모듈에 있던 코드 옮겨 옴에 따라 pom 파일에 필요한 의존성 추가

exception 추가
- DuplicatedEmailException, AlreadyRegisteredSocialException 추가

web 변경 사항
- SecurityConfig 수정
- AccountController 수정
- handler 클래스 이름 변경

--- a/RowdyStory/rowdystory-top/pom.xml
+++ b/RowdyStory/rowdystory-top/pom.xml
@@ -29,7 +29,7 @@
 		<module>rowdystory-domain</module>
 		<module>rowdystory-data</module>
 		<module>rowdystory-api</module>
-		<module>rowdystory-social</module>
+		<module>rowdystory-exception</module>
 	</modules>
   
 	<!-- spring boot parent -->
