--- a/RowdyStory/rowdystory-top/rowdystory-exception/pom.xml
+++ b/RowdyStory/rowdystory-top/rowdystory-exception/pom.xml
@@ -8,11 +8,11 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>rowdystory-social</artifactId>
+	<artifactId>rowdystory-exception</artifactId>
 	<packaging>jar</packaging>
 
-	<name>rowdystory-social</name>
-	<description>This is a social project.</description>
+	<name>rowdystory-exception</name>
+	<description>here are exception classes.</description>
 
 		<dependencies>
 		<!-- spring boot dependencies -->
@@ -23,14 +23,6 @@
 		<dependency>
   	  		<groupId>org.springframework.boot</groupId>
   	  		<artifactId>spring-boot-starter-security</artifactId>
-  		</dependency>
-  		<dependency>
-  	  		<groupId>org.springframework.security</groupId>
-  	  		<artifactId>spring-security-oauth2-client</artifactId>
-  		</dependency>
-  		<dependency>
-  	  		<groupId>org.springframework.security</groupId>
-  	  		<artifactId>spring-security-oauth2-jose</artifactId>
   		</dependency>
 		
 		<!-- rowdystory dependencies -->
