--- a/RowdyStory/rowdystory-top/rowdystory-service/pom.xml
+++ b/RowdyStory/rowdystory-top/rowdystory-service/pom.xml
@@ -25,6 +25,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-oauth2-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-oauth2-jose</artifactId>
+		</dependency>
 
 		<!-- rowdystory dependencies -->
 		<dependency>
@@ -35,6 +43,11 @@
 		<dependency>
 			<groupId>jin.h.mun</groupId>
 			<artifactId>rowdystory-data</artifactId>
+			<version>${rowdystory.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>jin.h.mun</groupId>
+			<artifactId>rowdystory-exception</artifactId>
 			<version>${rowdystory.version}</version>
 		</dependency>
 	</dependencies>
