--- a/RowdyStory/rowdystory-top/rowdystory-api/pom.xml
+++ b/RowdyStory/rowdystory-top/rowdystory-api/pom.xml
@@ -21,11 +21,20 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-hateoas</artifactId>
+		</dependency>
 
 		<!-- rowdystory dependencies -->
 		<dependency>
 			<groupId>jin.h.mun</groupId>
 			<artifactId>rowdystory-dto</artifactId>
+			<version>${rowdystory.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>jin.h.mun</groupId>
+			<artifactId>rowdystory-service</artifactId>
 			<version>${rowdystory.version}</version>
 		</dependency>
 	</dependencies>
