web, dto, data, domain 모듈 수정
web 모듈 수정 사항
- 회원 가입 기능 추가
- model 에 attribute 담는 방식 수정 (reflections 사용)
- 패키지 구조 변경

dto 모듈 변경 사항
- UserRegisterRequest picture 필드 삭제

data 모듈 변경 사항
- dto 모듈 변경에 따른 테스트 코드 수정

domain 모듈 변경 사항
- dto 모듈 변경에 따른 테스트 코드 수정
- User 도메인의 userEmail 에 인덱스 추가

--- a/RowdyStory/rowdystory-top/rowdystory-web/pom.xml
+++ b/RowdyStory/rowdystory-top/rowdystory-web/pom.xml
@@ -60,6 +60,13 @@
 			<version>1.5.7</version>
 		</dependency>
 
+		<!-- https://github.com/ronmamo/reflections -->
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>0.9.12</version>
+		</dependency>
+
 		<!-- rowdystory dependencies -->
 		<dependency>
 			<groupId>jin.h.mun</groupId>
