--- a/RowdyStory/rowdystory-top/rowdystory-domain/pom.xml
+++ b/RowdyStory/rowdystory-top/rowdystory-domain/pom.xml
@@ -34,6 +34,13 @@
 			<artifactId>rowdystory-dto</artifactId>
 			<version>${rowdystory.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.2.3</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
   
 </project>
