domain, data, service, web 모듈 수정, crypto 모듈 추가
crypto 모듈 추가
- AES256, SHA256 암호화를 위한 유틸 클래스 구현

domain 모듈 변경 사항
- crypto 모듈 추가
- User, SecretPost 의 password 필드에 PasswordCryptoUserType 적용
- User 롬복의 EqualsAndHashCode, ToString 어노테이션 사용하던 것을 직접 구현으로 변경
- UserTest 수정

data 모듈 변경 사항
- PostRepositoryTest 에서 테스트 게시물 생성 갯수 변경

service 모듈 변경 사항
- AccountService 에서 수동으로 암호화 하던 부분 삭제
- email 에 따라 계정 업데이트 해주는 메서드 추가
- AccountServiceTest 수정
- ReflectionUtil 추가, ReflectionUtil 의 기능은 특정 객체의 필드 값을 reflection 을 통해 업데이트 해줄 수 있음
- ReflectionUtilTest 추가

web 모듈 변경 사항
- AccountCRUDController 에 세션에 있는 이메일 정보에 따라 계정 정보를 업데이트 해줄 수 있는 메서드 추가
- AccountCRUDControllerTest 에 테스트 케이스 추가
- SecurityConfig 에 있던 빈 설정 BeanConfig 로 분리
- 마이페이지에서 비밀번호 변경 기능 추가
- RequestBodyFieldEncodeAdvice 추가, 이 advice 를 통해 requestBody 가 객체에 읽어들여진 후 해당 객체가 "password" 필드를 포함하고 있을 경우 해당 필드 값은 passwordEncoder 에 의해 암호화됨

--- a/RowdyStory/rowdystory-top/pom.xml
+++ b/RowdyStory/rowdystory-top/pom.xml
@@ -29,7 +29,8 @@
 		<module>rowdystory-domain</module>
 		<module>rowdystory-data</module>
 		<module>rowdystory-exception</module>
-	</modules>
+        <module>rowdystory-crypto</module>
+    </modules>
   
 	<!-- spring boot parent -->
 	<parent> 
